--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Nukecoin (Educational Demo)</h1>
+    <h1>Nukecoin</h1>
 
     <div id="authContainer">
         <button id="signInBtn">Sign In with Google</button>
