--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <div class="mining-section">
                 <h2>Mining</h2>
-                <p id="miningProblem">problem</p>
-                <p id="miningResult">doodowjw</p>
+                <p id="miningProblem"></p>
+                <p id="miningResult"></p>
                 <button id="mineButton" class="btn btn-mine">Start Mining</button><br><br>
             </div>
 
