--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
                 <input type="text" id="recipientAddress" placeholder="Recipient Address" class="input-field">
                 <input type="number" id="amount" placeholder="Amount" class="input-field">
                 <div style="display: flex; align-items: center;">
+                    <button id="signOutBtn" class="btn" style="background: #ff4b24;">Sign Out</button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
                     <button id="sendButton" class="btn btn-send">Send Coins</button>
-                    <button id="signOutBtn" class="btn" style="background: red;">Sign Out</button>
                 </div>
                 <p id="transactionResult"></p>
             </div>
